- DB fixes - Initial migration - Program.cs enhancements - simple controller get methods

--- a/ELibrary.WebApp/appsettings.json
+++ b/ELibrary.WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ELibraryDB.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
