--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ELibrary.WebApp/ELibraryDB.sqlite
+/ELibrary.WebApp/ELibraryDB.sqlite-shm
+/ELibrary.WebApp/ELibraryDB.sqlite-wal
