--- a/ELibrary.Database/ELibrary.Database.csproj
+++ b/ELibrary.Database/ELibrary.Database.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Elibrary.Shared\Elibrary.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
