--- a/ELibrary.WebApp/ELibrary.WebApp.csproj
+++ b/ELibrary.WebApp/ELibrary.WebApp.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ELibrary.Database\ELibrary.Database.csproj" />
+    <ProjectReference Include="..\ELibrary.Services\ELibrary.Services.csproj" />
   </ItemGroup>
 
 </Project>
