--- a/ELibrary.Application/ELibrary.Application.csproj
+++ b/ELibrary.Application/ELibrary.Application.csproj
@@ -1,16 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\ELibrary.Database\ELibrary.Database.csproj" />
     <ProjectReference Include="..\Elibrary.Domain\ELibrary.Domain.csproj" />
   </ItemGroup>
 
