--- a/ELibrary.UIBlazorClient/Properties/launchSettings.json
+++ b/ELibrary.UIBlazorClient/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ELibrary.BlazorClient": {
+    "ELibrary.UIBlazorClient": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
