- switching to postgre DB

--- a/ELibrary.Api/appsettings.json
+++ b/ELibrary.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ELibraryDB.sqlite"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=elibrary_db;Username=elibrary;Password=elibrary123"
   },
   "Logging": {
     "LogLevel": {
