--- a/ELibrary.Infrastructure/ELibrary.Infrastructure.csproj
+++ b/ELibrary.Infrastructure/ELibrary.Infrastructure.csproj
@@ -9,18 +9,18 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<Folder Include="Migrations\" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\Elibrary.Domain\ELibrary.Domain.csproj" />
   </ItemGroup>
