- docker files system - get ready for keycloak

--- a/ELibrary.Api/ELibrary.Api.csproj
+++ b/ELibrary.Api/ELibrary.Api.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\ELibrary.Infrastructure\ELibrary.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
+
 </Project>
