--- a/ELibrary.Api/appsettings.Development.json
+++ b/ELibrary.Api/appsettings.Development.json
@@ -1,8 +1,73 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=elibrary_db;Username=elibrary;Password=elibrary123"
+  },
+  
+  "Authentication": {
+    "Keycloak": {
+      "Authority": "http://localhost:8080/realms/elibrary",
+      "Audience": "elibrary-api",
+      "ClientId": "elibrary-api",
+      "RequireHttpsMetadata": false,
+      "ValidateIssuer": true,
+      "ValidateAudience": true,
+      "ValidateLifetime": true,
+      "ClockSkewSeconds": 5
     }
+  },
+  
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5173",
+      "http://localhost:5002",
+      "https://localhost:5173",
+      "https://localhost:5002"
+    ]
+  },
+  
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "Microsoft.AspNetCore": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext}{NewLine}      {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/elibrary-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {SourceContext}{NewLine}      {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
+  },
+  
+  "HealthChecks": {
+    "Enabled": true,
+    "DetailedErrors": true
+  },
+  
+  "RateLimiting": {
+    "EnableRateLimiting": false,
+    "PermitLimit": 1000,
+    "WindowSeconds": 60
   }
 }
