--- a/ELibrary.Api/appsettings.json
+++ b/ELibrary.Api/appsettings.json
@@ -1,12 +1,56 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=elibrary_db;Username=elibrary;Password=elibrary123"
+    "DefaultConnection": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  
+  "Authentication": {
+    "Keycloak": {
+      "Authority": "",
+      "Audience": "elibrary-api",
+      "ClientId": "elibrary-api",
+      "RequireHttpsMetadata": true,
+      "ValidateIssuer": true,
+      "ValidateAudience": true,
+      "ValidateLifetime": true,
+      "ClockSkewSeconds": 0
     }
   },
+  
+  "Cors": {
+    "AllowedOrigins": []
+  },
+  
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithEnvironmentName" ]
+  },
+  
+  "HealthChecks": {
+    "Enabled": true,
+    "DetailedErrors": false
+  },
+  
+  "RateLimiting": {
+    "EnableRateLimiting": true,
+    "PermitLimit": 100,
+    "WindowSeconds": 60
+  },
+  
   "AllowedHosts": "*"
 }
